fix z-index issue of open mobile menu. adjust spacing to allow more than 4 nav items.

--- a/contents/css/_topbar.css
+++ b/contents/css/_topbar.css
@@ -72,16 +72,13 @@
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 1;
+  z-index: 2;
   min-height: 80vh;
   background-color: var(--evalblack);
   padding-top: 2rem;
   font-size: 2rem;
   & .link--nav {
     padding: 2rem 1rem;
-    @media (--small) {
-      padding-top: 3rem;
-    }
   }
   & .social-links {
     margin: 0;
@@ -96,7 +93,7 @@
     }
   }
   @media (--xsmall) {
-    font-size: 4rem; /*64px*/
+    font-size: 2.5rem; /*40px*/
   }
   &:after {
     content: '';
